# netmd

./: CMakeLists.txt  README.md
libnetmd/: CMDiscHeader.cpp  CMDiscHeader.h  CMakeLists.txt  common.c  common.h  const.h  create_include.sh  error.h  libnetmd.c  libnetmd.h  libnetmd.pc.in  libnetmd_extended.h  libnetmd_intern.c  libnetmd_intern.h  log.c  log.h  netmd_dev.c  netmd_dev.h  netmd_transfer.c  netmd_transfer.h  patch.c  patch.h  playercontrol.h  secure.c  secure.h  trackinformation.c  trackinformation.h  utils.c  utils.c~RFa0fe5022.TMP  utils.h
netmdcli/: CMDiscHeader.cpp  CMDiscHeader.hpp  CMakeLists.txt  netmdcli.c  netmdcli.h
